update test addon

--- a/TestAddon/build.gradle
+++ b/TestAddon/build.gradle
@@ -19,5 +19,6 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
     compileOnly fileTree("libs").include("*.jar")
+    compileOnly("org.jetbrains:annotations:24.0.0")
 
 }
