--- a/TestAddon/src/main/resources/addon.yml
+++ b/TestAddon/src/main/resources/addon.yml
@@ -1,4 +1,4 @@
 name: TestAddon
-main: com.jodexindustries.testaddon.MainAddon
+main: com.jodexindustries.testaddon.boot.MainAddon
 version: 1.0.0
 author: "_Jodex__"
