Add es_ES language | Refactor

--- a/src/main/resources/resources/Config.yml
+++ b/src/main/resources/resources/Config.yml
@@ -11,7 +11,8 @@ DonateCase:
     DataBase: 'nameDataBase'
     User: 'root'
     Password: 'password'
-  Languages: en #ru/en/ua
+  # en_US, es_ES, ru_RU, ua_UA
+  Languages: en_US
   HologramDriver: DecentHolograms # CMI, DecentHolograms or HolographicDisplays
   PermissionDriver: luckperms # luckperms or vault
   # Only if Vault enabled
