--- a/src/main/resources/resources/cases/case.yml
+++ b/src/main/resources/resources/cases/case.yml
@@ -32,6 +32,7 @@ case:
   DisplayName: "&c&lDonate-&a&lCase" # Name for placeholders
   Gui: # see more about items configuring -> https://wiki.jodexindustries.xyz/docs/DonateCase/items-settings
     Size: 45
+    UpdateRate: 20 # in ticks, set -1 to disable updating
     Items:
       "1":
         DisplayName: "&cJodexIndustries.xyz"
