--- a/src/main/resources/resources/Config.yml
+++ b/src/main/resources/resources/Config.yml
@@ -26,7 +26,8 @@ DonateCase:
   DateFormat: "dd.MM HH:mm:ss"
   AddonsHelp: true # Show help list for addons commands?
   UsePackets: false # 1.18+ for using packets, you need to install packetevents plugin
-  # Caching for getting number of keys and case opens
+  # Caching for getting number of keys, case opens and history data
+  # Used only if MySQL enabled
   # Actually used in placeholders (GUI and PlaceholderAPI)
   Caching: 20 # in ticks
   # Set spawn-protection to 0 in server.properties
