Add FancyHolograms support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,6 +15,7 @@ softdepend:
   - DecentHolograms
   - CMI
   - HolographicDisplays
+  - FancyHolograms
   - Multiverse-Core
   - MultiWorld
   - packetevents
