--- a/src/main/resources/resources/Config.yml
+++ b/src/main/resources/resources/Config.yml
@@ -13,7 +13,7 @@ DonateCase:
     Password: 'password'
   # en_US, es_ES, ru_RU, ua_UA
   Languages: en_US
-  HologramDriver: DecentHolograms # CMI, DecentHolograms or HolographicDisplays
+  HologramDriver: DecentHolograms # CMI, DecentHolograms, HolographicDisplays or FancyHolograms
   PermissionDriver: luckperms # luckperms or vault
   # Only if Vault enabled
   LevelGroup: false #Enable if you use PermissionEX, if you use LuckPerms, don't enable if you use "parent add"
