--- a/src/main/resources/resources/cases/case.yml
+++ b/src/main/resources/resources/cases/case.yml
@@ -1,7 +1,7 @@
 config: 1.2
 case:
   Animation: SHAPE #SHAPE, FIREWORK, RAINLY, WHEEL, FULLWHEEL see: https://wiki.jodexindustries.xyz/docs/DonateCase/animations
-  Hologram: # Thanks CrazyCrates for realisation
+  Hologram: # see: https://wiki.jodexindustries.xyz/docs/DonateCase/holograms
     # Toggle on and off the holograms for the crates.
     Toggle: true
     # The height of the hologram above the crate.
@@ -11,7 +11,6 @@ case:
     # The message that will be displayed.
     Message:
       - '&6DonateCase'
-      -
 
   OpenType: GUI # or BLOCK
 
@@ -42,7 +41,7 @@ case:
         Slots: # or Slots: 0-10 (range)
           - 0
           - 8
-        Material: WHITE_STAINED_GLASS_PANE # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        Material: WHITE_STAINED_GLASS_PANE # see: https://wiki.jodexindustries.xyz/docs/DonateCase/materials
         Type: DEFAULT
       Open:
         DisplayName: "&bOpen Case"
@@ -62,14 +61,14 @@ case:
         - ''
         Slots: # or Slots: 0-10 (range)
           - 22
-        Material: TRIPWIRE_HOOK # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        Material: TRIPWIRE_HOOK # see: https://wiki.jodexindustries.xyz/docs/DonateCase/materials
         Type: OPEN # or you can use OPEN_<anotherCaseName> for opening another case 
   Items:
     Vip:
       Group: vip
       Chance: 30
       Item:
-        ID: YELLOW_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        ID: YELLOW_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/materials
         DisplayName: '&7[&eVIP&7]'
         Enchanted: false
       Index: 0
@@ -96,7 +95,7 @@ case:
       Group: vipplus
       Chance: 25
       Item:
-        ID: LIGHT_BLUE_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        ID: LIGHT_BLUE_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/materials
         DisplayName: '&7[&bVIP&6+&7]'
         Enchanted: false
       Index: 1
@@ -150,7 +149,7 @@ case:
       Group: deluxe
       Chance: 15
       Item:
-        ID: PURPLE_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        ID: PURPLE_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/materials
         DisplayName: '&7[&5Deluxe&7]'
         Enchanted: false
       Index: 3
@@ -176,7 +175,7 @@ case:
       Group: legend
       Chance: 10
       Item:
-        ID: PINK_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/item-id
+        ID: PINK_WOOL # see: https://wiki.jodexindustries.xyz/docs/DonateCase/materials
         DisplayName: '&7[&dLegend&7]'
         Enchanted: false
       Index: 4
