--- a/src/main/resources/resources/cases/case.yml
+++ b/src/main/resources/resources/cases/case.yml
@@ -1,6 +1,31 @@
 config: 1.2
 case:
-  Animation: SHAPE #SHAPE, FIREWORK, RAINLY, WHEEL see: https://wiki.jodexindustries.xyz/docs/DonateCase/animations
+  Animation: WHEEL #SHAPE, FIREWORK, RAINLY, WHEEL see: https://wiki.jodexindustries.xyz/docs/DonateCase/animations
+#  AnimationSettings:
+#    Type: FULL # or RANDOM
+#    ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
+#    SmallArmorStand: true
+#    Pose:
+#      Head: 0, 0, 0
+#      Body: 0, 0, 0
+#      RightArm: 0, 0, 0
+#      LeftArm: 0, 0, 0
+#      RightLeg: 0, 0, 0
+#      LeftLeg: 0, 0, 0
+#    ItemsCount: 6 # only for RANDOM type
+#    CircleSpeed: 0.5
+#    CircleRadius: 1.5
+#    LiftingAlongX: 0
+#    LiftingAlongY: 0
+#    LiftingAlongZ: 0
+#    Flame:
+#      Enabled: true
+#      Particle: FLAME
+#    Scroll:
+#      Time: 100
+#      Sound: UI_BUTTON_CLICK
+#      Volume: 10
+#      Pitch: 1
   Hologram: # see: https://wiki.jodexindustries.xyz/docs/DonateCase/holograms
     # Toggle on and off the holograms for the crates.
     Toggle: true
