Wheel bug fixes and improves
Fixed a bug where changing the rotation speed of the wheel and its spin time in the config did not work correctly (it showed that a different privilege was received than what actually occurred).
Removed the function for adjusting the wheel's rotation speed due to its lack of purpose. Instead, a function for setting a minimum number of spins has been added.
Added a Shuffle function in the config that randomizes all privileges.
Added a setting to adjust the "friction" of the wheel.
Added nonlinear animations for fire and improved the wheel animation.
Slightly changed the mechanics of the RANDOM wheel. Now, the actual privilege that the player will receive is placed in a random position.

--- a/spigot/src/main/resources/resources/Animations.yml
+++ b/spigot/src/main/resources/resources/Animations.yml
@@ -64,8 +64,8 @@ WHEEL:
     RightLeg: 0, 0, 0
     LeftLeg: 0, 0, 0
   ItemsCount: 6 # only for RANDOM type
-  CircleSpeed: 0.5
-  CircleRadius: 1.5
+  Shuffle: true # only for FULL type
+  CircleRadius: 2
   LiftingAlongX: 0
   LiftingAlongY: 0
   LiftingAlongZ: 0
@@ -73,7 +73,9 @@ WHEEL:
     Enabled: true
     Particle: FLAME
   Scroll:
-    Time: 100
+    Count: 1
+    Time: 150
+    EaseAmount: 2.5 # 1 = linear
     Sound: UI_BUTTON_CLICK
     Volume: 10
     Pitch: 1
