--- a/addons/DCBlockAnimations/src/main/resources/addon.yml
+++ b/addons/DCBlockAnimations/src/main/resources/addon.yml
@@ -2,3 +2,4 @@ name: DCBlockAnimations
 version: '${version}'
 main: com.jodexindustries.dcblockanimations.bootstrap.MainAddon
 authors: [_Jodex__]
+api: 2.0.0
