Add Scroll Yaw and Period (SHAPE animation)

--- a/spigot/src/main/resources/Animations.yml
+++ b/spigot/src/main/resources/Animations.yml
@@ -23,9 +23,11 @@ SHAPE:
   Tail:
     Radius: 0.5
   Scroll:
+    Period: 2
     Time: 15
     Height: 0.91
     Interval: 1
+    Yaw: 20.0
   End:
     Time: 25
 
