Add CheckPlayerName setting. Checking the player for availability.

--- a/spigot/src/main/resources/Config.yml
+++ b/spigot/src/main/resources/Config.yml
@@ -32,3 +32,5 @@ DonateCase:
   Caching: 20 # in ticks
   # Set spawn-protection to 0 in server.properties
   DisableSpawnProtection: true
+  # If true, checks whether the player with the nickname exists on the server.
+  CheckPlayerName: true
