--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ version: '${version}'
 website: "https://jodexindustries.xyz/"
 libraries:
   - com.j256.ormlite:ormlite-jdbc:6.1
+  - org.spongepowered:configurate-yaml:4.1.2
 softdepend:
   - LuckPerms
   - PlaceholderAPI
