--- a/common/src/main/resources/Config.yml
+++ b/common/src/main/resources/Config.yml
@@ -1,4 +1,6 @@
-config: '2.5' #DON'T CHANGE THIS PLEASE
+config:
+  version: 25
+  type: config
 
 DonateCase:
   #Do I need to check for plugin updates?
