--- a/addons/DCWebHook/src/main/resources/addon.yml
+++ b/addons/DCWebHook/src/main/resources/addon.yml
@@ -2,4 +2,5 @@ name: DCWebHook
 version: '${version}'
 main: com.jodexindustries.dcwebhook.bootstrap.MainAddon
 author: "_Jodex__"
-api: 2.0.0
+api: 2.1.0.0
+platforms: ["Bukkit"]
