--- a/common/src/main/resources/cases/case.yml
+++ b/common/src/main/resources/cases/case.yml
@@ -57,6 +57,8 @@ case:
 
   HistoryDataSize: 10 # 0 if you want to disable history data
 
+  CooldownBeforeAnimation: 0 # in tick
+
   LevelGroups: # delete all of this section, if you want to use default LevelGroups from Config.yml
     ultra: 6
     legend: 5
