Update DCPrizePreview and DCPhysicalKey addons

--- a/addons/DCPhysicalKey/src/main/resources/addon.yml
+++ b/addons/DCPhysicalKey/src/main/resources/addon.yml
@@ -1,4 +1,6 @@
 name: DCPhysicalKey
 version: '${version}'
-api: 2.0.0
 main: com.jodexindustries.dcphysicalkey.bootstrap.MainAddon
+author: "_Jodex__"
+api: 2.1.0.0
+platforms: ["Bukkit"]
