--- a/addons/DCPrizePreview/src/main/resources/addon.yml
+++ b/addons/DCPrizePreview/src/main/resources/addon.yml
@@ -2,4 +2,5 @@ name: PrizePreview
 version: '${version}'
 main: com.jodexindustries.dcprizepreview.bootstrap.MainAddon
 author: "_Jodex__"
-api: 2.0.2.2
+api: 2.1.0.0
+platforms: ["Bukkit"]
