--- a/common/src/main/resources/cases/case.yml
+++ b/common/src/main/resources/cases/case.yml
@@ -2,7 +2,7 @@ config:
   version: 13
   type: old_case
 case:
-  Animation: WHEEL #SHAPE, FIREWORK, RAINLY, WHEEL, RANDOM see: https://wiki.jodexindustries.xyz/en/docs/2.0.0/DonateCase/animations
+  Animation: WHEEL #SHAPE, FIREWORK, RAINLY, WHEEL, RANDOM, POP see: https://wiki.jodexindustries.xyz/en/docs/2.0.0/DonateCase/animations
 #  AnimationSettings:
 #    Type: FULL # or RANDOM
 #    ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
@@ -21,6 +21,8 @@ case:
 #      Sound: UI_BUTTON_CLICK
 #      Volume: 10
 #      Pitch: 1
+#    Facing: west # for POP animation
+
   Hologram: # see: https://wiki.jodexindustries.xyz/en/docs/2.0.0/DonateCase/holograms
     # Toggle on and off the holograms for the crates.
     Toggle: true
