PopSettings with Serializable

--- a/common/src/main/resources/Animations.yml
+++ b/common/src/main/resources/Animations.yml
@@ -124,6 +124,6 @@ POP:
     Sound: ENTITY_ITEM_PICKUP
     Volume: 10
     Pitch: 1
-  Facing: east
+  Facing: EAST
   Rounded: true
   Radius: 1.5
