--- a/addons/DCEventManager/src/main/resources/config.yml
+++ b/addons/DCEventManager/src/main/resources/config.yml
@@ -1,13 +1,7 @@
-Debug: false
-Package: "com.jodexindustries.donatecase.api.events" # dont change this
-
-Events: # See wiki -> https://wiki.jodexindustries.xyz/docs/DonateCase/Addons/dc-event-manager
-  MyEvent:
-    Event: AnimationStartEvent
-    Actions:
-      - "[command] say test"
-
-  MyAnotherEvent:
-    Event: AnimationEndEvent
-    Actions:
-      - "[broadcast] &dAnimation ended!"
+debug: false
+packages:
+#  - "com.jodexindustries.donatecase.api.event" # actually used only for FriendCase addon
+  - "com.jodexindustries.donatecase.api.event.addon"
+  - "com.jodexindustries.donatecase.api.event.animation"
+  - "com.jodexindustries.donatecase.api.event.player"
+  - "com.jodexindustries.donatecase.api.event.plugin"
