--- a/addons/DCEventManager/src/main/resources/placeholders.yml
+++ b/addons/DCEventManager/src/main/resources/placeholders.yml
@@ -1,25 +1,28 @@
-Events:
-  AddonDisableEvent: # event class name
-    addon: # placeholder id
-      placeholder: "%addon%" # replaced placeholder
-      method: "getAddon#getName" # class method
-    reason: # placeholder id
-      placeholder: "%reason%" # replaced placeholder
-      method: "getReason" # class method
-    caused: # placeholder id
-      placeholder: "%caused%" # replaced placeholder
-      method: "getCaused#getName" # class method
-  AddonEnableEvent: # event class name
-    addon: # placeholder id
-      placeholder: "%addon%" # replaced placeholder
-      method: "getAddon#getName" # class method
-    reason: # placeholder id
-      placeholder: "%reason%" # replaced placeholder
-      method: "getReason" # class method
-    caused: # placeholder id
-      placeholder: "%caused%" # replaced placeholder
-      method: "getCaused#getName" # class method
-  AnimationStartEvent: # event class name
-    player: # placeholder id
-      placeholder: "%player%" # replaced placeholder
-      method: "getPlayer#getName" # class method
+events:
+  AddonDisableEvent:
+    placeholders:
+      - name: addon  # placeholder id
+        replace: "%addon%" # replaced placeholder
+        method: "getAddon#getName" # class method
+      - name: reason
+        replace: "%reason%"
+        method: "getReason"
+      - name: caused
+        replace: "%caused%"
+        method: "getCaused#getName"
+  AddonEnableEvent:
+    placeholders:
+      - name: addon  # placeholder id
+        replace: "%addon%" # replaced placeholder
+        method: "getAddon#getName" # class method
+      - name: reason
+        replace: "%reason%"
+        method: "getReason"
+      - name: caused
+        replace: "%caused%"
+        method: "getCaused#getName"
+  AnimationStartEvent:
+    placeholders:
+      - name: player
+        replace: "%player%"
+        method: "activeCase#player#getName"
