AnimationsMigrator from 1.4 to 1.5 with new POP animation settings

--- a/common/src/main/resources/Animations.yml
+++ b/common/src/main/resources/Animations.yml
@@ -1,5 +1,5 @@
 config: # Please do not touch this section
-  version: 14
+  version: 15
   type: animations
 
 SHAPE:
@@ -127,3 +127,5 @@ POP:
   Facing: EAST
   Rounded: true
   Radius: 1.5
+#  Period: 0
+#  ItemSlot: HEAD
