--- a/addons/DCBlockAnimations/src/main/resources/addon.yml
+++ b/addons/DCBlockAnimations/src/main/resources/addon.yml
@@ -1,6 +1,6 @@
 name: DCBlockAnimations
 version: '${version}'
-main: com.jodexindustries.dcblockanimations.bootstrap.MainAddon
+main: com.jodexindustries.dcblockanimations.MainAddon
 author: "_Jodex__"
 api: 2.1.0.0
 platforms: ["Bukkit"]
