--- a/common/src/main/resources/Animations.yml
+++ b/common/src/main/resources/Animations.yml
@@ -127,14 +127,14 @@ POP:
     Sound: ENTITY_ITEM_PICKUP
     Volume: 10
     Pitch: 1
-  Facing: EAST
+  Facing: EAST # WEST, NORTH, EAST, SOUTH
   Rounded: true
   Radius: 1.5
 #  Period: 0
 #  ItemSlot: HEAD
 
 SELECT:
-  Facing: EAST
+  Facing: EAST # WEST, NORTH, EAST, SOUTH
   Timeout: 600 # in ticks
 #  Period: 0
 #  ItemSlot: HEAD
