--- a/common/src/main/resources/cases/case.yml
+++ b/common/src/main/resources/cases/case.yml
@@ -8,25 +8,27 @@ case:
 #    ItemSlot: HEAD # HEAD, HAND, OFF_HAND, FEET, LEGS, CHEST
 #    SmallArmorStand: true
 #    ItemsCount: 6 # only for RANDOM type
-#    CircleSpeed: 0.5
-#    CircleRadius: 1.5
-#    LiftingAlongX: 0
-#    LiftingAlongY: 0
-#    LiftingAlongZ: 0
+#    Shuffle: true # only for FULL type
+#    CircleRadius: 2
+#    StartPosition:
+#      x: 0.5
+#      y: 1
+#      z: 0.5
 #    Flame:
 #      Enabled: true
 #      Particle: FLAME
 #    Scroll:
-#      Time: 100
+#      Count: 1
+#      Time: 150
+#      EaseAmount: 2.5 # 1 = linear
 #      Sound: UI_BUTTON_CLICK
 #      Volume: 10
 #      Pitch: 1
-#    Facing: west # for POP animation
 
   Hologram: # see: https://wiki.jodexindustries.xyz/en/docs/2.0.0/DonateCase/holograms
-    # Toggle on and off the holograms for the crates.
+    # Toggle on and off the holograms for the case.
     Toggle: true
-    # The height of the hologram above the crate.
+    # The height of the hologram above the case.
     Height: 1.5
     # The distance the hologram can be seen. Only works with CMI and DecentHolograms
     Range: 8
