--- a/common/src/main/resources/Animations.yml
+++ b/common/src/main/resources/Animations.yml
@@ -136,5 +136,6 @@ POP:
 SELECT:
   Facing: EAST # WEST, NORTH, EAST, SOUTH
   Timeout: 600 # in ticks
+  Radius: 1
 #  Period: 0
 #  ItemSlot: HEAD
